--- a/Wizar/Wizar.vcxproj
+++ b/Wizar/Wizar.vcxproj
@@ -143,6 +143,10 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Wizar\Renderer\OrthographicCamera.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\Wizar\Renderer\RendererAPI.h" />
+    <ClInclude Include="src\Wizar\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Wizar\Renderer\Renderer.h" />
@@ -167,8 +171,9 @@
     <ClInclude Include="src\Wizar\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\Wizar\Renderer\shader.h" />
     <ClInclude Include="src\Wizar\Window.h" />
-    <ClInclude Include="src\wizar.h" />
+    <ClInclude Include="src\Wizar.h" />
     <ClInclude Include="src\wzpch.h" />
+    <ClInclude Include="src\Wizar\Core\TimeStep.h" />
     <ClInclude Include="vendor\glm\glm\common.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_features.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_fixes.hpp" />
@@ -590,6 +595,10 @@
     <ClInclude Include="src\Wizar\Renderer\VertexArray.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Wizar\Renderer\OrthographicCamera.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
+    <ClCompile Include="src\Wizar\Renderer\RendererAPI.cpp" />
+    <ClCompile Include="src\Wizar\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Wizar\Renderer\Renderer.cpp" />
@@ -608,6 +617,7 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\Wizar\Renderer\VertexArray.cpp" />
+    <ClCompile Include="src\Wizar\Core\TimeStep.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="vendor\GLFW\GLFW.vcxproj">
