完成了对纹理OpenGL 混合的封装

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -21,7 +21,7 @@ DockId=0x00000001,0
 
 [Window][ImGui Demo]
 ViewportPos=1554,390
-ViewportId=0x4AD707D2
+ViewportId=0x080FC883
 Size=335,481
 Collapsed=0
 DockId=0x00000003,0
@@ -42,6 +42,11 @@ ViewportId=0x4AD707D2
 Size=335,481
 Collapsed=0
 DockId=0x00000003,1
+
+[Window][Settings]
+Pos=60,60
+Size=137,54
+Collapsed=0
 
 [Docking][Data]
 DockNode      ID=0x00000003 Pos=1554,390 Size=335,481 SelectedTab=0x784DD132
