--- a/Wizar/Wizar.vcxproj
+++ b/Wizar/Wizar.vcxproj
@@ -77,7 +77,7 @@
       <PrecompiledHeaderFile>wzpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions> _CRT_SECURE_NO_WARNINGS;WZ_PLATFORM_WINDOWS;WZ_BUILD_DLL;GLFW_INCLUDE_NONE;WZ_DEBUG;WZ_ENABLE_ASSERTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -98,7 +98,7 @@
       <PrecompiledHeaderFile>wzpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions> _CRT_SECURE_NO_WARNINGS;WZ_PLATFORM_WINDOWS;WZ_BUILD_DLL;GLFW_INCLUDE_NONE;WZ_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -123,7 +123,7 @@
       <PrecompiledHeaderFile>wzpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions> _CRT_SECURE_NO_WARNINGS;WZ_PLATFORM_WINDOWS;WZ_BUILD_DLL;GLFW_INCLUDE_NONE;WZ_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -143,19 +143,18 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\Wizar\Renderer\OrthographicCamera.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
-    <ClInclude Include="src\Wizar\Renderer\RendererAPI.h" />
-    <ClInclude Include="src\Wizar\Renderer\RenderCommand.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
-    <ClInclude Include="src\Wizar\Renderer\Renderer.h" />
-    <ClInclude Include="src\Wizar\Renderer\Buffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLTexture.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
+    <ClInclude Include="src\Wizar.h" />
     <ClInclude Include="src\Wizar\Application.h" />
     <ClInclude Include="src\Wizar\Core.h" />
+    <ClInclude Include="src\Wizar\Core\TimeStep.h" />
     <ClInclude Include="src\Wizar\EntryPoint.h" />
     <ClInclude Include="src\Wizar\Events\ApplicationEvent.h" />
     <ClInclude Include="src\Wizar\Events\Event.h" />
@@ -168,12 +167,17 @@
     <ClInclude Include="src\Wizar\LayerStack.h" />
     <ClInclude Include="src\Wizar\Log.h" />
     <ClInclude Include="src\Wizar\MouseButtonCodes.h" />
+    <ClInclude Include="src\Wizar\Renderer\Buffer.h" />
     <ClInclude Include="src\Wizar\Renderer\GraphicsContext.h" />
-    <ClInclude Include="src\Wizar\Renderer\shader.h" />
+    <ClInclude Include="src\Wizar\Renderer\OrthographicCamera.h" />
+    <ClInclude Include="src\Wizar\Renderer\RenderCommand.h" />
+    <ClInclude Include="src\Wizar\Renderer\Renderer.h" />
+    <ClInclude Include="src\Wizar\Renderer\RendererAPI.h" />
+    <ClInclude Include="src\Wizar\Renderer\Shader.h" />
+    <ClInclude Include="src\Wizar\Renderer\Texture.h" />
+    <ClInclude Include="src\Wizar\Renderer\VertexArray.h" />
     <ClInclude Include="src\Wizar\Window.h" />
-    <ClInclude Include="src\Wizar.h" />
     <ClInclude Include="src\wzpch.h" />
-    <ClInclude Include="src\Wizar\Core\TimeStep.h" />
     <ClInclude Include="vendor\glm\glm\common.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_features.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_fixes.hpp" />
@@ -592,32 +596,36 @@
     <ClInclude Include="vendor\glm\glm\vec3.hpp" />
     <ClInclude Include="vendor\glm\glm\vec4.hpp" />
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp" />
-    <ClInclude Include="src\Wizar\Renderer\VertexArray.h" />
+    <ClInclude Include="vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Wizar\Renderer\OrthographicCamera.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
-    <ClCompile Include="src\Wizar\Renderer\RendererAPI.cpp" />
-    <ClCompile Include="src\Wizar\Renderer\RenderCommand.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
-    <ClCompile Include="src\Wizar\Renderer\Renderer.cpp" />
-    <ClCompile Include="src\Wizar\Renderer\Buffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\Wizar\Application.cpp" />
+    <ClCompile Include="src\Wizar\Core\TimeStep.cpp" />
     <ClCompile Include="src\Wizar\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\Wizar\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\Wizar\Layer.cpp" />
     <ClCompile Include="src\Wizar\LayerStack.cpp" />
     <ClCompile Include="src\Wizar\Log.cpp" />
-    <ClCompile Include="src\Wizar\Renderer\shader.cpp" />
+    <ClCompile Include="src\Wizar\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Wizar\Renderer\OrthographicCamera.cpp" />
+    <ClCompile Include="src\Wizar\Renderer\RenderCommand.cpp" />
+    <ClCompile Include="src\Wizar\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Wizar\Renderer\RendererAPI.cpp" />
+    <ClCompile Include="src\Wizar\Renderer\Shader.cpp" />
+    <ClCompile Include="src\Wizar\Renderer\Texture.cpp" />
+    <ClCompile Include="src\Wizar\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\wzpch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="src\Wizar\Renderer\VertexArray.cpp" />
-    <ClCompile Include="src\Wizar\Core\TimeStep.cpp" />
+    <ClCompile Include="vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="vendor\GLFW\GLFW.vcxproj">
