--- a/Wizar/Wizar.vcxproj
+++ b/Wizar/Wizar.vcxproj
@@ -76,11 +76,13 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>wzpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions> _CRT_SECURE_NO_WARNINGS;WZ_PLATFORM_WINDOWS;WZ_BUILD_DLL;GLFW_INCLUDE_NONE;WZ_DEBUG;WZ_ENABLE_ASSERTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WZ_BUILD_DLL;GLFW_INCLUDE_NONE;WZ_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
+      <MinimalRebuild>false</MinimalRebuild>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <ExternalWarningLevel>Level3</ExternalWarningLevel>
     </ClCompile>
@@ -97,7 +99,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>wzpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions> _CRT_SECURE_NO_WARNINGS;WZ_PLATFORM_WINDOWS;WZ_BUILD_DLL;GLFW_INCLUDE_NONE;WZ_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WZ_BUILD_DLL;GLFW_INCLUDE_NONE;WZ_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -105,6 +107,7 @@
       <MinimalRebuild>false</MinimalRebuild>
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <ExternalWarningLevel>Level3</ExternalWarningLevel>
     </ClCompile>
@@ -122,7 +125,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>wzpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions> _CRT_SECURE_NO_WARNINGS;WZ_PLATFORM_WINDOWS;WZ_BUILD_DLL;GLFW_INCLUDE_NONE;WZ_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WZ_BUILD_DLL;GLFW_INCLUDE_NONE;WZ_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -130,6 +133,7 @@
       <MinimalRebuild>false</MinimalRebuild>
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <ExternalWarningLevel>Level3</ExternalWarningLevel>
     </ClCompile>
@@ -143,7 +147,6 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\Wizar\Renderer\OrthographicCameraController.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
@@ -155,29 +158,30 @@
     <ClInclude Include="src\Wizar.h" />
     <ClInclude Include="src\Wizar\Core\Application.h" />
     <ClInclude Include="src\Wizar\Core\Core.h" />
-    <ClInclude Include="src\Wizar\Core\TimeStep.h" />
     <ClInclude Include="src\Wizar\Core\EntryPoint.h" />
-    <ClInclude Include="src\Wizar\Events\ApplicationEvent.h" />
-    <ClInclude Include="src\Wizar\Events\Event.h" />
-    <ClInclude Include="src\Wizar\Events\KeyEvent.h" />
-    <ClInclude Include="src\Wizar\Events\MouseEvent.h" />
-    <ClInclude Include="src\Wizar\ImGui\ImGuiLayer.h" />
     <ClInclude Include="src\Wizar\Core\Input.h" />
     <ClInclude Include="src\Wizar\Core\KeyCodes.h" />
     <ClInclude Include="src\Wizar\Core\Layer.h" />
     <ClInclude Include="src\Wizar\Core\LayerStack.h" />
     <ClInclude Include="src\Wizar\Core\Log.h" />
     <ClInclude Include="src\Wizar\Core\MouseButtonCodes.h" />
+    <ClInclude Include="src\Wizar\Core\TimeStep.h" />
+    <ClInclude Include="src\Wizar\Core\Window.h" />
+    <ClInclude Include="src\Wizar\Events\ApplicationEvent.h" />
+    <ClInclude Include="src\Wizar\Events\Event.h" />
+    <ClInclude Include="src\Wizar\Events\KeyEvent.h" />
+    <ClInclude Include="src\Wizar\Events\MouseEvent.h" />
+    <ClInclude Include="src\Wizar\ImGui\ImGuiLayer.h" />
     <ClInclude Include="src\Wizar\Renderer\Buffer.h" />
     <ClInclude Include="src\Wizar\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\Wizar\Renderer\OrthographicCamera.h" />
+    <ClInclude Include="src\Wizar\Renderer\OrthographicCameraController.h" />
     <ClInclude Include="src\Wizar\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Wizar\Renderer\Renderer.h" />
     <ClInclude Include="src\Wizar\Renderer\RendererAPI.h" />
-    <ClInclude Include="src\Wizar\Renderer\Shader.h" />
     <ClInclude Include="src\Wizar\Renderer\Texture.h" />
     <ClInclude Include="src\Wizar\Renderer\VertexArray.h" />
-    <ClInclude Include="src\Wizar\Core\Window.h" />
+    <ClInclude Include="src\Wizar\Renderer\shader.h" />
     <ClInclude Include="src\wzpch.h" />
     <ClInclude Include="vendor\glm\glm\common.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_features.hpp" />
@@ -600,7 +604,6 @@
     <ClInclude Include="vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Wizar\Renderer\OrthographicCameraController.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
@@ -610,20 +613,21 @@
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\Wizar\Core\Application.cpp" />
-    <ClCompile Include="src\Wizar\Core\TimeStep.cpp" />
-    <ClCompile Include="src\Wizar\ImGui\ImGuiBuild.cpp" />
-    <ClCompile Include="src\Wizar\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\Wizar\Core\Layer.cpp" />
     <ClCompile Include="src\Wizar\Core\LayerStack.cpp" />
     <ClCompile Include="src\Wizar\Core\Log.cpp" />
+    <ClCompile Include="src\Wizar\Core\TimeStep.cpp" />
+    <ClCompile Include="src\Wizar\ImGui\ImGuiBuild.cpp" />
+    <ClCompile Include="src\Wizar\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\Wizar\Renderer\Buffer.cpp" />
     <ClCompile Include="src\Wizar\Renderer\OrthographicCamera.cpp" />
+    <ClCompile Include="src\Wizar\Renderer\OrthographicCameraController.cpp" />
     <ClCompile Include="src\Wizar\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Wizar\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Wizar\Renderer\RendererAPI.cpp" />
-    <ClCompile Include="src\Wizar\Renderer\Shader.cpp" />
     <ClCompile Include="src\Wizar\Renderer\Texture.cpp" />
     <ClCompile Include="src\Wizar\Renderer\VertexArray.cpp" />
+    <ClCompile Include="src\Wizar\Renderer\shader.cpp" />
     <ClCompile Include="src\wzpch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
